@@ -40,4 +40,9 @@ COMMIT
 3|2|ARY|{{4,2},{5,2}}
 3|3|ARY|{{25,2}}
 3|4|ARY|{{3,2}}
+t2060|P1|{{3,3},{6,3}}
+t2060|P2|{{4,3},{7,3}}
+t2060|P3|{{5,3},{8,3}}
+t2060|P4|{{2,3}}
+t2060|P5|{{1,3}}
 Topology 'city_data' dropped
